[project]
name = "PHOTON platform-projector"
dynamic = ["version"]
authors = [
  { name="phi ARCHITECT", email="github@phiarchitect.com" },
]
description = "create and manage log entries for a python project"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual",
    "rich",
    "jinja2",
]

[project.scripts]
projector = "photon platform.projector.__main__:main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["photon platform"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "photon platform.projector.__version__"}

[project.urls]
"Website" = "https://PHOTON platform.github.io/projector"
"Repository" = "https://github.com/PHOTON platform/projector"
"Issues" = "https://github.com/PHOTON platform/projector/issues"